objects/Tw1_Dados_de_Contato_adicionais__c.object
<CustomObject>
    <description>Objeto para armazenar dados de contato das contas e contatos, como: telefone, e-mail, etc</description>
    <fields>
        <fullName>Tw1_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Dados_de_Contatos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tw1_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Dados_de_Contatos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tw1_Contato__c</fullName>
        <label>Contato</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Dados de Contato Adicionais</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Tudo</label>
    </listViews>
    <nameField>
        <displayFormat>DC# {00000000}</displayFormat>
        <label>Dados de Contato Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dados de Contatos Adicionais</pluralLabel>
    <recordTypes>
        <fullName>Tw1_RT_Comercial</fullName>
        <active>true</active>
        <description>Telefone Comercial</description>
        <label>Comercial</label>
    </recordTypes>
    <recordTypes>
        <fullName>Tw1_RT_E_mail</fullName>
        <active>true</active>
        <description>Endereço de E-mail</description>
        <label>E-mail</label>
    </recordTypes>
    <recordTypes>
        <fullName>Tw1_TR_Celular</fullName>
        <active>true</active>
        <description>Telefone Celular</description>
        <label>Celular</label>
    </recordTypes>
    <recordTypes>
        <fullName>Tw1_TR_Facebook</fullName>
        <active>true</active>
        <description>Usuário de perfil do Facebook</description>
        <label>Facebook</label>
    </recordTypes>
    <recordTypes>
        <fullName>Tw1_TR_Fax</fullName>
        <active>true</active>
        <description>Número de FAX</description>
        <label>Fax</label>
    </recordTypes>
    <recordTypes>
        <fullName>Tw1_TR_Telefone</fullName>
        <active>true</active>
        <description>Telefone Residencial</description>
        <label>Telefone</label>
    </recordTypes>
    <recordTypes>
        <fullName>Tw1_TR_Twitter</fullName>
        <active>true</active>
        <description>Conta de perfil do Twitter</description>
        <label>Twitter</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Tw1_Validacao_Dados_Celular</fullName>
        <active>true</active>
        <description>Valida quando o tipo selecionado for celular</description>
        <errorConditionFormula>IF ($RecordType.Name = &quot;Celular&quot;, NOT(
OR(
ISBLANK( Tw1_Contato__c ),
REGEX( Tw1_Contato__c ,&quot;\\([0-9]{2}\\)[0-9]{4,5}-[0-9]{4}&quot;)
)
),FALSE)</errorConditionFormula>
        <errorMessage>Verifique se o contato está escrito no formato  (xx)xxxxx-xxxx.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Tw1_Validacao_Dados_Email</fullName>
        <active>true</active>
        <description>Valida quando o tipo digitado é e-mail</description>
        <errorConditionFormula>IF ( RecordType.DeveloperName = &quot;Tw1_RT_E_mail&quot;, NOT(REGEX( Tw1_Contato__c ,&apos;([a-zA-Z0-9_\\-\\.]+)@((\\[a-z]{1,3}\\.[a-z]{1,3}\\.[a-z]{1,3}\\.)|(([a-zA-Z0-9\\-]+\\.)+))([a-zA-Z]{2,4}|[0-9]{1,3})&apos;)), FALSE)</errorConditionFormula>
        <errorMessage>Verifique se o e-mail cadastrado segue o padrão contato@dominio.tipo</errorMessage>
    </validationRules>
</CustomObject>